--- a/src/views/jobs.ejs
+++ b/src/views/jobs.ejs
@@ -1,19 +1,26 @@
-<h1 id="heading"><lord-icon
+<h1 id="heading">
+  <lord-icon
     src="https://cdn.lordicon.com/ibanawal.json"
     trigger="hover"
-    style="width:60px;height:60px">
-</lord-icon> Jobs</h1>
+    style="width: 60px; height: 60px"
+  >
+  </lord-icon>
+  Jobs
+</h1>
 
 <div class="card-space">
-    <% jobs.forEach(job=>{ %>
-    <div class="card">
-        <h2><%= job.name %></h2>
-        <p><%= job.role %></p>
-        <p><%= job.location %></p>
-        <p><%= job.ctc %></p>
-        <p class="skills" title="<%= job.skills.join(', ') %>"><%= job.skills.join('  ').substring(0, 40) %><%= job.skills.length > 40 ? '...' : '' %></p>
-        <a href="#" onclick="viewDetails()">View Details</a>
-    </div>
-<% }) %>
-    
+  <% jobs.forEach(job=>{ %>
+  <div class="card">
+    <h2><%= job.name %></h2>
+    <p><%= job.role %></p>
+    <p><%= job.location %></p>
+    <p><%= job.ctc %></p>
+    <% if(job.skills) {%>
+    <p class="skills">
+        <%= job.skills.join(' ') %><%= job.skills.length > 40 ? '...' : '' %>
+    </p>
+    <% } %>
+    <a href="/view-details/<%= job.id %>">View Details</a>
+  </div>
+  <% }) %>
 </div>
