--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Portal</title>
-    <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="jobs.css">
+    <link rel="stylesheet" href="view-Details.css">
+    <link rel="stylesheet" href="add-new-job.css">
+    <link rel="stylesheet" href="layout.css">
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -48,6 +50,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/"
                 >Jobs</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/addNewJob"
+                >Add New Job</a
               >
             </li>
            
