--- a/public/view-Details.css
+++ b/public/view-Details.css
@@ -1,5 +1,4 @@
-
-.view-details{
+.view-details {
   margin: 5%;
 }
 
@@ -8,5 +7,17 @@
   height: 254px;
   border-radius: 30px;
   background: lightgrey;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
+}
+
+button {
+  border: none;
+  background: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  font: inherit; /* Ensures the button inherits font styles from its parent */
+  color: inherit; /* Ensures the button inherits text color from its parent */
 }
