--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="view-Details.css">
     <link rel="stylesheet" href="add-new-job.css">
     <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="applyJob.css">
+   
+    
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -84,6 +87,7 @@
         </div>
         
       </div>
-    </body>
+      <script src="main.js"></script>
+      
 </body>
 </html>
